--- a/kaggle_notebook.ipynb
+++ b/kaggle_notebook.ipynb
@@ -63,10 +63,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Copy Project Files\n",
+    "## 3. Find and Setup Data/Model Paths\n",
     "\n",
-    "**Note:** In Kaggle, you'll need to add the project files as datasets or copy them manually.\n",
-    "This cell assumes the files are available in `/kaggle/input/` or you can upload them.\n"
+    "**필요한 파일들 (Required Files):**\n",
+    "\n",
+    "캐글에 업로드해야 할 파일들:\n",
+    "1. **모델 파일 (Model Files):**\n",
+    "   - `t15_pretrained_rnn_baseline/checkpoint/args.yaml`\n",
+    "   - `t15_pretrained_rnn_baseline/checkpoint/best_checkpoint`\n",
+    "   \n",
+    "2. **데이터 파일 (Data Files):**\n",
+    "   - `hdf5_data_final/` 디렉토리 (세션별 HDF5 파일들 포함)\n",
+    "   - `t15_copyTaskData_description.csv`\n",
+    "\n",
+    "**다운로드 방법:**\n",
+    "- Dryad에서 다운로드: https://datadryad.org/stash/dataset/doi:10.5061/dryad.dncjsxm85\n",
+    "- `t15_pretrained_rnn_baseline.zip` 압축 해제\n",
+    "- `t15_copyTask_neuralData.zip` 압축 해제하여 `hdf5_data_final` 폴더 추출\n"
    ]
   },
   {
@@ -75,16 +88,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy files from input dataset (adjust path as needed)\n",
-    "# Uncomment and modify if you have the files in a Kaggle dataset\n",
+    "# 자동으로 파일 경로 찾기 (Auto-detect file paths)\n",
+    "import glob\n",
     "\n",
-    "# import shutil\n",
-    "# \n",
-    "# # Example: Copy from input dataset\n",
-    "# # shutil.copytree('/kaggle/input/your-dataset-name/model_training', '/kaggle/working/model_training', dirs_exist_ok=True)\n",
-    "# # shutil.copytree('/kaggle/input/your-dataset-name/nejm_b2txt_utils', '/kaggle/working/nejm_b2txt_utils', dirs_exist_ok=True)\n",
+    "def find_model_path():\n",
+    "    \"\"\"Find the model checkpoint directory\"\"\"\n",
+    "    # Check common Kaggle input locations\n",
+    "    search_paths = [\n",
+    "        '/kaggle/input/*/t15_pretrained_rnn_baseline',\n",
+    "        '/kaggle/input/*/*/t15_pretrained_rnn_baseline',\n",
+    "        '/kaggle/input/*/data/t15_pretrained_rnn_baseline',\n",
+    "        '/kaggle/working/t15_pretrained_rnn_baseline',\n",
+    "    ]\n",
+    "    \n",
+    "    for pattern in search_paths:\n",
+    "        matches = glob.glob(pattern)\n",
+    "        for match in matches:\n",
+    "            args_file = os.path.join(match, 'checkpoint', 'args.yaml')\n",
+    "            checkpoint_file = os.path.join(match, 'checkpoint', 'best_checkpoint')\n",
+    "            if os.path.exists(args_file) and os.path.exists(checkpoint_file):\n",
+    "                return match\n",
+    "    \n",
+    "    return None\n",
     "\n",
-    "print(\"Files should be copied manually or via Kaggle dataset\")\n"
+    "def find_data_path():\n",
+    "    \"\"\"Find the HDF5 data directory\"\"\"\n",
+    "    search_paths = [\n",
+    "        '/kaggle/input/*/hdf5_data_final',\n",
+    "        '/kaggle/input/*/*/hdf5_data_final',\n",
+    "        '/kaggle/input/*/data/hdf5_data_final',\n",
+    "        '/kaggle/working/hdf5_data_final',\n",
+    "    ]\n",
+    "    \n",
+    "    for pattern in search_paths:\n",
+    "        matches = glob.glob(pattern)\n",
+    "        for match in matches:\n",
+    "            if os.path.isdir(match):\n",
+    "                return match\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "def find_csv_path():\n",
+    "    \"\"\"Find the CSV metadata file\"\"\"\n",
+    "    search_paths = [\n",
+    "        '/kaggle/input/*/t15_copyTaskData_description.csv',\n",
+    "        '/kaggle/input/*/*/t15_copyTaskData_description.csv',\n",
+    "        '/kaggle/input/*/data/t15_copyTaskData_description.csv',\n",
+    "        '/kaggle/working/t15_copyTaskData_description.csv',\n",
+    "    ]\n",
+    "    \n",
+    "    for pattern in search_paths:\n",
+    "        matches = glob.glob(pattern)\n",
+    "        for match in matches:\n",
+    "            if os.path.exists(match):\n",
+    "                return match\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "# Try to find files automatically\n",
+    "model_path = find_model_path()\n",
+    "data_dir = find_data_path()\n",
+    "csv_path = find_csv_path()\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"파일 경로 검색 결과 (File Path Detection Results):\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "if model_path:\n",
+    "    print(f\"✓ 모델 경로 (Model path): {model_path}\")\n",
+    "else:\n",
+    "    print(\"✗ 모델 경로를 찾을 수 없습니다 (Model path not found)\")\n",
+    "    print(\"  필요한 파일:\")\n",
+    "    print(\"    - t15_pretrained_rnn_baseline/checkpoint/args.yaml\")\n",
+    "    print(\"    - t15_pretrained_rnn_baseline/checkpoint/best_checkpoint\")\n",
+    "\n",
+    "if data_dir:\n",
+    "    print(f\"✓ 데이터 디렉토리 (Data directory): {data_dir}\")\n",
+    "else:\n",
+    "    print(\"✗ 데이터 디렉토리를 찾을 수 없습니다 (Data directory not found)\")\n",
+    "    print(\"  필요한 디렉토리: hdf5_data_final/\")\n",
+    "\n",
+    "if csv_path:\n",
+    "    print(f\"✓ CSV 파일 (CSV file): {csv_path}\")\n",
+    "else:\n",
+    "    print(\"✗ CSV 파일을 찾을 수 없습니다 (CSV file not found)\")\n",
+    "    print(\"  필요한 파일: t15_copyTaskData_description.csv\")\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# List available input directories for debugging\n",
+    "if os.path.exists('/kaggle/input'):\n",
+    "    print(\"\\n사용 가능한 입력 디렉토리 (Available input directories):\")\n",
+    "    for item in os.listdir('/kaggle/input'):\n",
+    "        item_path = os.path.join('/kaggle/input', item)\n",
+    "        print(f\"  - {item_path}\")\n",
+    "        if os.path.isdir(item_path):\n",
+    "            try:\n",
+    "                subitems = os.listdir(item_path)[:5]  # Show first 5 items\n",
+    "                for subitem in subitems:\n",
+    "                    print(f\"    └─ {subitem}\")\n",
+    "            except:\n",
+    "                pass\n"
    ]
   },
   {
@@ -288,23 +392,68 @@
     "from omegaconf import OmegaConf\n",
     "import pandas as pd\n",
     "\n",
-    "# Configuration - UPDATE THESE PATHS FOR YOUR KAGGLE SETUP\n",
+    "# Configuration - 자동으로 찾은 경로 사용 또는 수동으로 설정\n",
+    "# Use auto-detected paths or set manually\n",
     "CONFIG = {\n",
-    "    'model_path': '/kaggle/input/your-model-path/t15_pretrained_rnn_baseline',  # Update this\n",
-    "    'data_dir': '/kaggle/input/your-data-path/hdf5_data_final',  # Update this\n",
-    "    'csv_path': '/kaggle/input/your-data-path/t15_copyTaskData_description.csv',  # Update this\n",
+    "    'model_path': model_path if 'model_path' in globals() and model_path else '/kaggle/input/your-model-path/t15_pretrained_rnn_baseline',\n",
+    "    'data_dir': data_dir if 'data_dir' in globals() and data_dir else '/kaggle/input/your-data-path/hdf5_data_final',\n",
+    "    'csv_path': csv_path if 'csv_path' in globals() and csv_path else '/kaggle/input/your-data-path/t15_copyTaskData_description.csv',\n",
     "    'eval_type': 'test',  # 'val' or 'test'\n",
     "    'gpu_number': 0,  # GPU to use, or -1 for CPU\n",
     "    'output_file': 'predictions.csv'\n",
     "}\n",
     "\n",
+    "# 경로가 자동으로 찾아지지 않은 경우 수동으로 설정하세요\n",
+    "# If paths were not auto-detected, set them manually here:\n",
+    "# CONFIG['model_path'] = '/kaggle/input/your-dataset-name/t15_pretrained_rnn_baseline'\n",
+    "# CONFIG['data_dir'] = '/kaggle/input/your-dataset-name/hdf5_data_final'\n",
+    "# CONFIG['csv_path'] = '/kaggle/input/your-dataset-name/t15_copyTaskData_description.csv'\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"현재 설정 (Current Configuration):\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"모델 경로 (Model path): {CONFIG['model_path']}\")\n",
+    "print(f\"데이터 디렉토리 (Data directory): {CONFIG['data_dir']}\")\n",
+    "print(f\"CSV 파일 (CSV file): {CONFIG['csv_path']}\")\n",
+    "print(f\"평가 타입 (Evaluation type): {CONFIG['eval_type']}\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# 파일 존재 여부 확인\n",
+    "print(\"\\n파일 존재 여부 확인 (File Existence Check):\")\n",
+    "model_args_file = os.path.join(CONFIG['model_path'], 'checkpoint', 'args.yaml')\n",
+    "model_checkpoint = os.path.join(CONFIG['model_path'], 'checkpoint', 'best_checkpoint')\n",
+    "\n",
+    "if os.path.exists(model_args_file):\n",
+    "    print(f\"✓ 모델 설정 파일 존재: {model_args_file}\")\n",
+    "else:\n",
+    "    print(f\"✗ 모델 설정 파일 없음: {model_args_file}\")\n",
+    "\n",
+    "if os.path.exists(model_checkpoint):\n",
+    "    print(f\"✓ 모델 체크포인트 존재: {model_checkpoint}\")\n",
+    "else:\n",
+    "    print(f\"✗ 모델 체크포인트 없음: {model_checkpoint}\")\n",
+    "\n",
+    "if os.path.exists(CONFIG['csv_path']):\n",
+    "    print(f\"✓ CSV 파일 존재: {CONFIG['csv_path']}\")\n",
+    "else:\n",
+    "    print(f\"✗ CSV 파일 없음: {CONFIG['csv_path']}\")\n",
+    "\n",
+    "if os.path.exists(CONFIG['data_dir']):\n",
+    "    print(f\"✓ 데이터 디렉토리 존재: {CONFIG['data_dir']}\")\n",
+    "    # Count HDF5 files\n",
+    "    hdf5_count = sum(1 for root, dirs, files in os.walk(CONFIG['data_dir']) \n",
+    "                     for f in files if f.endswith('.hdf5'))\n",
+    "    print(f\"  └─ HDF5 파일 개수: {hdf5_count}\")\n",
+    "else:\n",
+    "    print(f\"✗ 데이터 디렉토리 없음: {CONFIG['data_dir']}\")\n",
+    "\n",
     "# Set device\n",
     "if torch.cuda.is_available() and CONFIG['gpu_number'] >= 0:\n",
     "    device = torch.device(f'cuda:{CONFIG[\"gpu_number\"]}')\n",
-    "    print(f'✓ Using {device} for model inference.')\n",
+    "    print(f'\\n✓ Using {device} for model inference.')\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
-    "    print('⚠ Using CPU for model inference.')\n"
+    "    print('\\n⚠ Using CPU for model inference.')\n"
    ]
   },
   {
@@ -321,7 +470,28 @@
    "outputs": [],
    "source": [
     "# Load model configuration\n",
-    "model_args = OmegaConf.load(os.path.join(CONFIG['model_path'], 'checkpoint/args.yaml'))\n",
+    "model_args_path = os.path.join(CONFIG['model_path'], 'checkpoint', 'args.yaml')\n",
+    "\n",
+    "if not os.path.exists(model_args_path):\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"\\n모델 설정 파일을 찾을 수 없습니다!\\n\"\n",
+    "        f\"Model config file not found: {model_args_path}\\n\\n\"\n",
+    "        f\"필요한 파일 구조 (Required file structure):\\n\"\n",
+    "        f\"  {CONFIG['model_path']}/\\n\"\n",
+    "        f\"    └─ checkpoint/\\n\"\n",
+    "        f\"        ├─ args.yaml\\n\"\n",
+    "        f\"        └─ best_checkpoint\\n\\n\"\n",
+    "        f\"캐글에 다음 파일들을 업로드하세요:\\n\"\n",
+    "        f\"Please upload these files to Kaggle:\\n\"\n",
+    "        f\"1. t15_pretrained_rnn_baseline.zip을 다운로드하고 압축 해제\\n\"\n",
+    "        f\"   Download and extract t15_pretrained_rnn_baseline.zip from Dryad\\n\"\n",
+    "        f\"2. 캐글 데이터셋으로 업로드\\n\"\n",
+    "        f\"   Upload as Kaggle dataset\\n\"\n",
+    "        f\"3. 노트북에 데이터셋 추가 (Add Data 버튼)\\n\"\n",
+    "        f\"   Add dataset to notebook (Add Data button)\\n\"\n",
+    "    )\n",
+    "\n",
+    "model_args = OmegaConf.load(model_args_path)\n",
     "\n",
     "# Create model\n",
     "model = GRUDecoder(\n",
@@ -337,8 +507,18 @@
     ")\n",
     "\n",
     "# Load model weights\n",
+    "checkpoint_path = os.path.join(CONFIG['model_path'], 'checkpoint', 'best_checkpoint')\n",
+    "\n",
+    "if not os.path.exists(checkpoint_path):\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"\\n모델 체크포인트 파일을 찾을 수 없습니다!\\n\"\n",
+    "        f\"Model checkpoint file not found: {checkpoint_path}\\n\\n\"\n",
+    "        f\"필요한 파일: {checkpoint_path}\\n\"\n",
+    "        f\"Required file: {checkpoint_path}\\n\"\n",
+    "    )\n",
+    "\n",
     "checkpoint = torch.load(\n",
-    "    os.path.join(CONFIG['model_path'], 'checkpoint/best_checkpoint'),\n",
+    "    checkpoint_path,\n",
     "    weights_only=False,\n",
     "    map_location=device\n",
     ")\n",
@@ -577,21 +757,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notes\n",
+    "## Notes & Troubleshooting\n",
     "\n",
-    "1. **Data Paths**: Update the paths in the CONFIG section (Cell 5) to match your Kaggle dataset structure.\n",
-    "2. **Language Model**: The full language model pipeline requires Redis and additional setup. For Kaggle, you may need to use a simplified approach or implement phoneme-to-text conversion.\n",
-    "3. **Phoneme-to-Text**: The current implementation uses phoneme sequences as placeholders. You'll need to implement proper phoneme-to-text conversion or use the language model.\n",
-    "4. **File Structure**: Make sure your Kaggle dataset includes:\n",
-    "   - Model checkpoint files (`checkpoint/args.yaml`, `checkpoint/best_checkpoint`)\n",
-    "   - HDF5 data files (`hdf5_data_final/`)\n",
-    "   - CSV metadata file (`t15_copyTaskData_description.csv`)\n",
-    "   - Project source files (optional, if not defining inline)\n",
+    "### 필요한 파일들 (Required Files)\n",
     "\n",
-    "5. **Kaggle Dataset Setup**: \n",
-    "   - Upload your model and data as Kaggle datasets\n",
-    "   - Add them to your notebook via \"Add Data\" button\n",
-    "   - Update the paths in CONFIG to point to `/kaggle/input/your-dataset-name/...`\n"
+    "캐글에 업로드해야 할 파일들:\n",
+    "\n",
+    "1. **모델 파일 (Model Files):**\n",
+    "   - `t15_pretrained_rnn_baseline/checkpoint/args.yaml`\n",
+    "   - `t15_pretrained_rnn_baseline/checkpoint/best_checkpoint`\n",
+    "   \n",
+    "   **다운로드:** Dryad에서 `t15_pretrained_rnn_baseline.zip` 다운로드\n",
+    "   - 링크: https://datadryad.org/stash/dataset/doi:10.5061/dryad.dncjsxm85\n",
+    "\n",
+    "2. **데이터 파일 (Data Files):**\n",
+    "   - `hdf5_data_final/` 디렉토리 (세션별 HDF5 파일들)\n",
+    "   - `t15_copyTaskData_description.csv`\n",
+    "   \n",
+    "   **다운로드:** Dryad에서 `t15_copyTask_neuralData.zip` 다운로드\n",
+    "\n",
+    "### 캐글 업로드 방법\n",
+    "\n",
+    "1. Dryad에서 파일 다운로드 및 압축 해제\n",
+    "2. 캐글에서 \"Datasets\" → \"New Dataset\"으로 데이터셋 생성\n",
+    "3. 노트북에서 \"Add Data\" 버튼으로 데이터셋 추가\n",
+    "4. Cell 3이 자동으로 파일 경로를 찾아줍니다\n",
+    "\n",
+    "### 문제 해결\n",
+    "\n",
+    "- **파일을 찾을 수 없다는 에러:** Cell 3의 출력을 확인하고, Cell 5에서 경로를 수동으로 설정하세요\n",
+    "- **자세한 가이드:** 프로젝트의 `KAGGLE_SETUP.md` 파일 참조\n",
+    "\n",
+    "### 기타 참고사항\n",
+    "\n",
+    "1. **Language Model**: 전체 언어 모델 파이프라인은 Redis가 필요합니다. 캐글에서는 간소화된 접근 방식이 필요할 수 있습니다.\n",
+    "2. **Phoneme-to-Text**: 현재 구현은 음소 시퀀스를 플레이스홀더로 사용합니다. 실제 사용 시 음소-텍스트 변환을 구현해야 합니다.\n",
+    "3. **File Structure**: 캐글 데이터셋의 파일 구조가 올바른지 확인하세요.\n"
    ]
   }
  ],
