Update kaggle_notebook.ipynd: Dryad Loader

--- a/kaggle_notebook.ipynb
+++ b/kaggle_notebook.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Install required packages\n",
     "!pip install -q torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
-    "!pip install -q omegaconf pandas numpy h5py tqdm editdistance scipy g2p_en"
+    "!pip install -q omegaconf pandas numpy h5py tqdm editdistance scipy g2p_en requests"
    ]
   },
   {
@@ -63,23 +63,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Find and Setup Data/Model Paths\n",
+    "## 3. Download Data from Dryad (Optional)\n",
     "\n",
-    "**필요한 파일들 (Required Files):**\n",
+    "**Note:** If you already have the data files uploaded as Kaggle datasets, you can skip this section and go to section 4.\n",
     "\n",
-    "캐글에 업로드해야 할 파일들:\n",
-    "1. **모델 파일 (Model Files):**\n",
+    "This section attempts to download data directly from Dryad. However, Dryad may require manual download through their web interface.\n",
+    "\n",
+    "**Required Files:**\n",
+    "1. **Model Files:**\n",
     "   - `t15_pretrained_rnn_baseline/checkpoint/args.yaml`\n",
     "   - `t15_pretrained_rnn_baseline/checkpoint/best_checkpoint`\n",
     "   \n",
-    "2. **데이터 파일 (Data Files):**\n",
-    "   - `hdf5_data_final/` 디렉토리 (세션별 HDF5 파일들 포함)\n",
+    "2. **Data Files:**\n",
+    "   - `hdf5_data_final/` directory (session-specific HDF5 files)\n",
     "   - `t15_copyTaskData_description.csv`\n",
     "\n",
-    "**다운로드 방법:**\n",
-    "- Dryad에서 다운로드: https://datadryad.org/stash/dataset/doi:10.5061/dryad.dncjsxm85\n",
-    "- `t15_pretrained_rnn_baseline.zip` 압축 해제\n",
-    "- `t15_copyTask_neuralData.zip` 압축 해제하여 `hdf5_data_final` 폴더 추출\n"
+    "**Download Source:** https://doi.org/10.5061/dryad.dncjsxm85\n"
    ]
   },
   {
@@ -88,6 +87,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dryad에서 데이터 다운로드 시도 (Try downloading from Dryad)\n",
+    "# 주의: Dryad는 웹 인터페이스를 통한 수동 다운로드를 요구할 수 있습니다\n",
+    "# Note: Dryad may require manual download through web interface\n",
+    "\n",
+    "import requests\n",
+    "import zipfile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "DRYAD_DOI = \"10.5061/dryad.dncjsxm85\"\n",
+    "DRYAD_BASE_URL = f\"https://datadryad.org/stash/dataset/doi:{DRYAD_DOI}\"\n",
+    "\n",
+    "# 다운로드할 파일 목록\n",
+    "FILES_TO_DOWNLOAD = {\n",
+    "    't15_pretrained_rnn_baseline.zip': {\n",
+    "        'url': None,  # Will be constructed\n",
+    "        'extract_to': '/kaggle/working',\n",
+    "        'required': True\n",
+    "    },\n",
+    "    't15_copyTask_neuralData.zip': {\n",
+    "        'url': None,\n",
+    "        'extract_to': '/kaggle/working',\n",
+    "        'required': True\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "def download_from_dryad(file_name, output_dir='/kaggle/working'):\n",
+    "    \"\"\"\n",
+    "    Dryad에서 파일 다운로드 시도\n",
+    "    Note: Dryad may not provide direct download links, manual download may be required\n",
+    "    \"\"\"\n",
+    "    print(f\"Attempting to download {file_name}...\")\n",
+    "    \n",
+    "    # Try different possible URL patterns\n",
+    "    possible_urls = [\n",
+    "        f\"https://datadryad.org/api/v2/datasets/doi:{DRYAD_DOI}/files/{file_name}/download\",\n",
+    "        f\"https://datadryad.org/stash/downloads/file_download/{file_name}\",\n",
+    "        f\"https://datadryad.org/stash/downloads/{file_name}\",\n",
+    "    ]\n",
+    "    \n",
+    "    output_path = os.path.join(output_dir, file_name)\n",
+    "    \n",
+    "    for url in possible_urls:\n",
+    "        try:\n",
+    "            print(f\"  Trying URL: {url}\")\n",
+    "            response = requests.get(url, stream=True, timeout=30)\n",
+    "            \n",
+    "            if response.status_code == 200:\n",
+    "                total_size = int(response.headers.get('content-length', 0))\n",
+    "                print(f\"  Downloading {file_name} ({total_size / (1024**3):.2f} GB)...\")\n",
+    "                \n",
+    "                with open(output_path, 'wb') as f:\n",
+    "                    downloaded = 0\n",
+    "                    for chunk in response.iter_content(chunk_size=8192):\n",
+    "                        if chunk:\n",
+    "                            f.write(chunk)\n",
+    "                            downloaded += len(chunk)\n",
+    "                            if total_size > 0:\n",
+    "                                percent = (downloaded / total_size) * 100\n",
+    "                                if downloaded % (100 * 1024 * 1024) == 0:  # Print every 100MB\n",
+    "                                    print(f\"    Progress: {percent:.1f}%\")\n",
+    "                \n",
+    "                print(f\"  ✓ Successfully downloaded {file_name}\")\n",
+    "                return output_path\n",
+    "            else:\n",
+    "                print(f\"  ✗ Status code: {response.status_code}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"  ✗ Error: {str(e)}\")\n",
+    "            continue\n",
+    "    \n",
+    "    print(f\"  ✗ Could not download {file_name} automatically\")\n",
+    "    print(f\"  Please download manually from: {DRYAD_BASE_URL}\")\n",
+    "    return None\n",
+    "\n",
+    "def extract_zip(zip_path, extract_to):\n",
+    "    \"\"\"압축 파일 해제\"\"\"\n",
+    "    try:\n",
+    "        print(f\"Extracting {zip_path} to {extract_to}...\")\n",
+    "        with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(extract_to)\n",
+    "        print(f\"  ✓ Successfully extracted {zip_path}\")\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        print(f\"  ✗ Error extracting {zip_path}: {str(e)}\")\n",
+    "        return False\n",
+    "\n",
+    "# 다운로드 시도 (Download attempt)\n",
+    "# 주의: 이 코드는 작동하지 않을 수 있습니다. Dryad는 수동 다운로드를 요구할 수 있습니다.\n",
+    "# Note: This may not work as Dryad may require manual download\n",
+    "\n",
+    "DOWNLOAD_ENABLED = False  # Set to True to attempt automatic download\n",
+    "\n",
+    "if DOWNLOAD_ENABLED:\n",
+    "    print(\"=\" * 60)\n",
+    "    print(\"Attempting to download files from Dryad...\")\n",
+    "    print(\"=\" * 60)\n",
+    "    \n",
+    "    downloaded_files = []\n",
+    "    for file_name, file_info in FILES_TO_DOWNLOAD.items():\n",
+    "        file_path = download_from_dryad(file_name, file_info['extract_to'])\n",
+    "        if file_path and os.path.exists(file_path):\n",
+    "            downloaded_files.append((file_path, file_info['extract_to']))\n",
+    "    \n",
+    "    # Extract downloaded files\n",
+    "    if downloaded_files:\n",
+    "        print(\"\\nExtracting downloaded files...\")\n",
+    "        for zip_path, extract_to in downloaded_files:\n",
+    "            extract_zip(zip_path, extract_to)\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print(\"Download process completed.\")\n",
+    "    print(\"If files were not downloaded, please download manually from:\")\n",
+    "    print(f\"  {DRYAD_BASE_URL}\")\n",
+    "    print(\"=\" * 60)\n",
+    "else:\n",
+    "    print(\"=\" * 60)\n",
+    "    print(\"Automatic download is disabled.\")\n",
+    "    print(\"Please download files manually from Dryad:\")\n",
+    "    print(f\"  {DRYAD_BASE_URL}\")\n",
+    "    print(\"\\nRequired files:\")\n",
+    "    print(\"  1. t15_pretrained_rnn_baseline.zip\")\n",
+    "    print(\"  2. t15_copyTask_neuralData.zip\")\n",
+    "    print(\"\\nAfter downloading, upload them as Kaggle datasets or extract them manually.\")\n",
+    "    print(\"=\" * 60)\n",
+    "\n",
     "# 자동으로 파일 경로 찾기 (Auto-detect file paths)\n",
     "import glob\n",
     "\n",
@@ -195,7 +318,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Import or Define Core Functions\n",
+    "## 4. Find and Setup Data/Model Paths\n",
+    "\n",
+    "This section automatically searches for model and data files in common Kaggle locations.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Import or Define Core Functions\n",
     "\n",
     "Try to import from project files first. If not available, essential functions are defined inline.\n"
    ]
@@ -379,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Configuration\n"
+    "## 6. Configuration\n"
    ]
   },
   {
@@ -392,8 +524,8 @@
     "from omegaconf import OmegaConf\n",
     "import pandas as pd\n",
     "\n",
-    "# Configuration - 자동으로 찾은 경로 사용 또는 수동으로 설정\n",
-    "# Use auto-detected paths or set manually\n",
+    "# Configuration - Use auto-detected paths or set manually\n",
+    "# 자동으로 찾은 경로를 사용하거나 수동으로 설정\n",
     "CONFIG = {\n",
     "    'model_path': model_path if 'model_path' in globals() and model_path else '/kaggle/input/your-model-path/t15_pretrained_rnn_baseline',\n",
     "    'data_dir': data_dir if 'data_dir' in globals() and data_dir else '/kaggle/input/your-data-path/hdf5_data_final',\n",
@@ -403,49 +535,50 @@
     "    'output_file': 'predictions.csv'\n",
     "}\n",
     "\n",
-    "# 경로가 자동으로 찾아지지 않은 경우 수동으로 설정하세요\n",
     "# If paths were not auto-detected, set them manually here:\n",
+    "# 경로가 자동으로 찾아지지 않은 경우 수동으로 설정하세요\n",
     "# CONFIG['model_path'] = '/kaggle/input/your-dataset-name/t15_pretrained_rnn_baseline'\n",
     "# CONFIG['data_dir'] = '/kaggle/input/your-dataset-name/hdf5_data_final'\n",
     "# CONFIG['csv_path'] = '/kaggle/input/your-dataset-name/t15_copyTaskData_description.csv'\n",
     "\n",
     "print(\"=\" * 60)\n",
-    "print(\"현재 설정 (Current Configuration):\")\n",
+    "print(\"Current Configuration:\")\n",
     "print(\"=\" * 60)\n",
-    "print(f\"모델 경로 (Model path): {CONFIG['model_path']}\")\n",
-    "print(f\"데이터 디렉토리 (Data directory): {CONFIG['data_dir']}\")\n",
-    "print(f\"CSV 파일 (CSV file): {CONFIG['csv_path']}\")\n",
-    "print(f\"평가 타입 (Evaluation type): {CONFIG['eval_type']}\")\n",
+    "print(f\"Model path: {CONFIG['model_path']}\")\n",
+    "print(f\"Data directory: {CONFIG['data_dir']}\")\n",
+    "print(f\"CSV file: {CONFIG['csv_path']}\")\n",
+    "print(f\"Evaluation type: {CONFIG['eval_type']}\")\n",
     "print(\"=\" * 60)\n",
     "\n",
+    "# Check file existence\n",
     "# 파일 존재 여부 확인\n",
-    "print(\"\\n파일 존재 여부 확인 (File Existence Check):\")\n",
+    "print(\"\\nFile Existence Check:\")\n",
     "model_args_file = os.path.join(CONFIG['model_path'], 'checkpoint', 'args.yaml')\n",
     "model_checkpoint = os.path.join(CONFIG['model_path'], 'checkpoint', 'best_checkpoint')\n",
     "\n",
     "if os.path.exists(model_args_file):\n",
-    "    print(f\"✓ 모델 설정 파일 존재: {model_args_file}\")\n",
+    "    print(f\"✓ Model config file exists: {model_args_file}\")\n",
     "else:\n",
-    "    print(f\"✗ 모델 설정 파일 없음: {model_args_file}\")\n",
+    "    print(f\"✗ Model config file not found: {model_args_file}\")\n",
     "\n",
     "if os.path.exists(model_checkpoint):\n",
-    "    print(f\"✓ 모델 체크포인트 존재: {model_checkpoint}\")\n",
+    "    print(f\"✓ Model checkpoint exists: {model_checkpoint}\")\n",
     "else:\n",
-    "    print(f\"✗ 모델 체크포인트 없음: {model_checkpoint}\")\n",
+    "    print(f\"✗ Model checkpoint not found: {model_checkpoint}\")\n",
     "\n",
     "if os.path.exists(CONFIG['csv_path']):\n",
-    "    print(f\"✓ CSV 파일 존재: {CONFIG['csv_path']}\")\n",
+    "    print(f\"✓ CSV file exists: {CONFIG['csv_path']}\")\n",
     "else:\n",
-    "    print(f\"✗ CSV 파일 없음: {CONFIG['csv_path']}\")\n",
+    "    print(f\"✗ CSV file not found: {CONFIG['csv_path']}\")\n",
     "\n",
     "if os.path.exists(CONFIG['data_dir']):\n",
-    "    print(f\"✓ 데이터 디렉토리 존재: {CONFIG['data_dir']}\")\n",
+    "    print(f\"✓ Data directory exists: {CONFIG['data_dir']}\")\n",
     "    # Count HDF5 files\n",
     "    hdf5_count = sum(1 for root, dirs, files in os.walk(CONFIG['data_dir']) \n",
     "                     for f in files if f.endswith('.hdf5'))\n",
-    "    print(f\"  └─ HDF5 파일 개수: {hdf5_count}\")\n",
+    "    print(f\"  └─ Number of HDF5 files: {hdf5_count}\")\n",
     "else:\n",
-    "    print(f\"✗ 데이터 디렉토리 없음: {CONFIG['data_dir']}\")\n",
+    "    print(f\"✗ Data directory not found: {CONFIG['data_dir']}\")\n",
     "\n",
     "# Set device\n",
     "if torch.cuda.is_available() and CONFIG['gpu_number'] >= 0:\n",
@@ -460,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Load Model\n"
+    "## 7. Load Model\n"
    ]
   },
   {
@@ -474,21 +607,17 @@
     "\n",
     "if not os.path.exists(model_args_path):\n",
     "    raise FileNotFoundError(\n",
-    "        f\"\\n모델 설정 파일을 찾을 수 없습니다!\\n\"\n",
-    "        f\"Model config file not found: {model_args_path}\\n\\n\"\n",
-    "        f\"필요한 파일 구조 (Required file structure):\\n\"\n",
+    "        f\"\\nModel config file not found: {model_args_path}\\n\\n\"\n",
+    "        f\"Required file structure:\\n\"\n",
     "        f\"  {CONFIG['model_path']}/\\n\"\n",
     "        f\"    └─ checkpoint/\\n\"\n",
     "        f\"        ├─ args.yaml\\n\"\n",
     "        f\"        └─ best_checkpoint\\n\\n\"\n",
-    "        f\"캐글에 다음 파일들을 업로드하세요:\\n\"\n",
     "        f\"Please upload these files to Kaggle:\\n\"\n",
-    "        f\"1. t15_pretrained_rnn_baseline.zip을 다운로드하고 압축 해제\\n\"\n",
-    "        f\"   Download and extract t15_pretrained_rnn_baseline.zip from Dryad\\n\"\n",
-    "        f\"2. 캐글 데이터셋으로 업로드\\n\"\n",
-    "        f\"   Upload as Kaggle dataset\\n\"\n",
-    "        f\"3. 노트북에 데이터셋 추가 (Add Data 버튼)\\n\"\n",
-    "        f\"   Add dataset to notebook (Add Data button)\\n\"\n",
+    "        f\"1. Download and extract t15_pretrained_rnn_baseline.zip from Dryad\\n\"\n",
+    "        f\"   URL: https://doi.org/10.5061/dryad.dncjsxm85\\n\"\n",
+    "        f\"2. Upload as Kaggle dataset\\n\"\n",
+    "        f\"3. Add dataset to notebook (Add Data button)\\n\"\n",
     "    )\n",
     "\n",
     "model_args = OmegaConf.load(model_args_path)\n",
@@ -511,10 +640,9 @@
     "\n",
     "if not os.path.exists(checkpoint_path):\n",
     "    raise FileNotFoundError(\n",
-    "        f\"\\n모델 체크포인트 파일을 찾을 수 없습니다!\\n\"\n",
-    "        f\"Model checkpoint file not found: {checkpoint_path}\\n\\n\"\n",
-    "        f\"필요한 파일: {checkpoint_path}\\n\"\n",
+    "        f\"\\nModel checkpoint file not found: {checkpoint_path}\\n\\n\"\n",
     "        f\"Required file: {checkpoint_path}\\n\"\n",
+    "        f\"Download from: https://doi.org/10.5061/dryad.dncjsxm85\\n\"\n",
     "    )\n",
     "\n",
     "checkpoint = torch.load(\n",
@@ -541,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Load Data\n"
+    "## 8. Load Data\n"
    ]
   },
   {
@@ -576,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Run Inference (Phoneme Predictions)\n"
+    "## 9. Run Inference (Phoneme Predictions)\n"
    ]
   },
   {
@@ -613,7 +741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Convert Logits to Phonemes\n"
+    "## 10. Convert Logits to Phonemes\n"
    ]
   },
   {
@@ -643,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Generate Predictions\n",
+    "## 11. Generate Predictions\n",
     "\n",
     "**Note:** The full language model pipeline requires Redis and additional setup. \n",
     "For Kaggle, you may need to use a simplified approach or implement phoneme-to-text conversion.\n"
@@ -682,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11. Save Predictions\n"
+    "## 12. Save Predictions\n"
    ]
   },
   {
@@ -713,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12. Evaluation (Validation Set Only)\n",
+    "## 13. Evaluation (Validation Set Only)\n",
     "\n",
     "If evaluating on validation set, calculate Word Error Rate (WER).\n"
    ]
@@ -759,40 +887,40 @@
    "source": [
     "## Notes & Troubleshooting\n",
     "\n",
-    "### 필요한 파일들 (Required Files)\n",
+    "### Required Files\n",
     "\n",
-    "캐글에 업로드해야 할 파일들:\n",
+    "Files to upload to Kaggle:\n",
     "\n",
-    "1. **모델 파일 (Model Files):**\n",
+    "1. **Model Files:**\n",
     "   - `t15_pretrained_rnn_baseline/checkpoint/args.yaml`\n",
     "   - `t15_pretrained_rnn_baseline/checkpoint/best_checkpoint`\n",
     "   \n",
-    "   **다운로드:** Dryad에서 `t15_pretrained_rnn_baseline.zip` 다운로드\n",
-    "   - 링크: https://datadryad.org/stash/dataset/doi:10.5061/dryad.dncjsxm85\n",
+    "   **Download:** `t15_pretrained_rnn_baseline.zip` from Dryad\n",
+    "   - URL: https://doi.org/10.5061/dryad.dncjsxm85\n",
     "\n",
-    "2. **데이터 파일 (Data Files):**\n",
-    "   - `hdf5_data_final/` 디렉토리 (세션별 HDF5 파일들)\n",
+    "2. **Data Files:**\n",
+    "   - `hdf5_data_final/` directory (session-specific HDF5 files)\n",
     "   - `t15_copyTaskData_description.csv`\n",
     "   \n",
-    "   **다운로드:** Dryad에서 `t15_copyTask_neuralData.zip` 다운로드\n",
+    "   **Download:** `t15_copyTask_neuralData.zip` from Dryad\n",
     "\n",
-    "### 캐글 업로드 방법\n",
+    "### How to Upload to Kaggle\n",
     "\n",
-    "1. Dryad에서 파일 다운로드 및 압축 해제\n",
-    "2. 캐글에서 \"Datasets\" → \"New Dataset\"으로 데이터셋 생성\n",
-    "3. 노트북에서 \"Add Data\" 버튼으로 데이터셋 추가\n",
-    "4. Cell 3이 자동으로 파일 경로를 찾아줍니다\n",
+    "1. Download files from Dryad and extract them\n",
+    "2. Create Kaggle dataset: \"Datasets\" → \"New Dataset\"\n",
+    "3. Add dataset to notebook: \"Add Data\" button\n",
+    "4. Section 4 will automatically find file paths\n",
     "\n",
-    "### 문제 해결\n",
+    "### Troubleshooting\n",
     "\n",
-    "- **파일을 찾을 수 없다는 에러:** Cell 3의 출력을 확인하고, Cell 5에서 경로를 수동으로 설정하세요\n",
-    "- **자세한 가이드:** 프로젝트의 `KAGGLE_SETUP.md` 파일 참조\n",
+    "- **File not found error:** Check output from Section 4, manually set paths in Section 5\n",
+    "- **Detailed guide:** See `KAGGLE_SETUP.md` file in the project\n",
     "\n",
-    "### 기타 참고사항\n",
+    "### Additional Notes\n",
     "\n",
-    "1. **Language Model**: 전체 언어 모델 파이프라인은 Redis가 필요합니다. 캐글에서는 간소화된 접근 방식이 필요할 수 있습니다.\n",
-    "2. **Phoneme-to-Text**: 현재 구현은 음소 시퀀스를 플레이스홀더로 사용합니다. 실제 사용 시 음소-텍스트 변환을 구현해야 합니다.\n",
-    "3. **File Structure**: 캐글 데이터셋의 파일 구조가 올바른지 확인하세요.\n"
+    "1. **Language Model**: Full language model pipeline requires Redis. Simplified approach may be needed for Kaggle.\n",
+    "2. **Phoneme-to-Text**: Current implementation uses phoneme sequences as placeholders. Implement proper phoneme-to-text conversion for actual use.\n",
+    "3. **File Structure**: Verify that Kaggle dataset file structure is correct.\n"
    ]
   }
  ],
