--- a/kaggle_notebook.ipynb
+++ b/kaggle_notebook.ipynb
@@ -87,8 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dryad에서 데이터 다운로드 시도 (Try downloading from Dryad)\n",
-    "# 주의: Dryad는 웹 인터페이스를 통한 수동 다운로드를 요구할 수 있습니다\n",
+    "# Try downloading data from Dryad\n",
     "# Note: Dryad may require manual download through web interface\n",
     "\n",
     "import requests\n",
@@ -98,7 +97,7 @@
     "DRYAD_DOI = \"10.5061/dryad.dncjsxm85\"\n",
     "DRYAD_BASE_URL = f\"https://datadryad.org/stash/dataset/doi:{DRYAD_DOI}\"\n",
     "\n",
-    "# 다운로드할 파일 목록\n",
+    "# List of files to download\n",
     "FILES_TO_DOWNLOAD = {\n",
     "    't15_pretrained_rnn_baseline.zip': {\n",
     "        'url': None,  # Will be constructed\n",
@@ -114,7 +113,7 @@
     "\n",
     "def download_from_dryad(file_name, output_dir='/kaggle/working'):\n",
     "    \"\"\"\n",
-    "    Dryad에서 파일 다운로드 시도\n",
+    "    Attempt to download file from Dryad\n",
     "    Note: Dryad may not provide direct download links, manual download may be required\n",
     "    \"\"\"\n",
     "    print(f\"Attempting to download {file_name}...\")\n",
@@ -161,7 +160,7 @@
     "    return None\n",
     "\n",
     "def extract_zip(zip_path, extract_to):\n",
-    "    \"\"\"압축 파일 해제\"\"\"\n",
+    "    \"\"\"Extract zip file\"\"\"\n",
     "    try:\n",
     "        print(f\"Extracting {zip_path} to {extract_to}...\")\n",
     "        with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
@@ -172,8 +171,7 @@
     "        print(f\"  ✗ Error extracting {zip_path}: {str(e)}\")\n",
     "        return False\n",
     "\n",
-    "# 다운로드 시도 (Download attempt)\n",
-    "# 주의: 이 코드는 작동하지 않을 수 있습니다. Dryad는 수동 다운로드를 요구할 수 있습니다.\n",
+    "# Download attempt\n",
     "# Note: This may not work as Dryad may require manual download\n",
     "\n",
     "DOWNLOAD_ENABLED = False  # Set to True to attempt automatic download\n",
@@ -211,7 +209,7 @@
     "    print(\"\\nAfter downloading, upload them as Kaggle datasets or extract them manually.\")\n",
     "    print(\"=\" * 60)\n",
     "\n",
-    "# 자동으로 파일 경로 찾기 (Auto-detect file paths)\n",
+    "# Auto-detect file paths\n",
     "import glob\n",
     "\n",
     "def find_model_path():\n",
@@ -274,34 +272,34 @@
     "csv_path = find_csv_path()\n",
     "\n",
     "print(\"=\" * 60)\n",
-    "print(\"파일 경로 검색 결과 (File Path Detection Results):\")\n",
+    "print(\"File Path Detection Results:\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "if model_path:\n",
-    "    print(f\"✓ 모델 경로 (Model path): {model_path}\")\n",
+    "    print(f\"✓ Model path found: {model_path}\")\n",
     "else:\n",
-    "    print(\"✗ 모델 경로를 찾을 수 없습니다 (Model path not found)\")\n",
-    "    print(\"  필요한 파일:\")\n",
+    "    print(\"✗ Model path not found\")\n",
+    "    print(\"  Required files:\")\n",
     "    print(\"    - t15_pretrained_rnn_baseline/checkpoint/args.yaml\")\n",
     "    print(\"    - t15_pretrained_rnn_baseline/checkpoint/best_checkpoint\")\n",
     "\n",
     "if data_dir:\n",
-    "    print(f\"✓ 데이터 디렉토리 (Data directory): {data_dir}\")\n",
+    "    print(f\"✓ Data directory found: {data_dir}\")\n",
     "else:\n",
-    "    print(\"✗ 데이터 디렉토리를 찾을 수 없습니다 (Data directory not found)\")\n",
-    "    print(\"  필요한 디렉토리: hdf5_data_final/\")\n",
+    "    print(\"✗ Data directory not found\")\n",
+    "    print(\"  Required directory: hdf5_data_final/\")\n",
     "\n",
     "if csv_path:\n",
-    "    print(f\"✓ CSV 파일 (CSV file): {csv_path}\")\n",
+    "    print(f\"✓ CSV file found: {csv_path}\")\n",
     "else:\n",
-    "    print(\"✗ CSV 파일을 찾을 수 없습니다 (CSV file not found)\")\n",
-    "    print(\"  필요한 파일: t15_copyTaskData_description.csv\")\n",
+    "    print(\"✗ CSV file not found\")\n",
+    "    print(\"  Required file: t15_copyTaskData_description.csv\")\n",
     "\n",
     "print(\"=\" * 60)\n",
     "\n",
     "# List available input directories for debugging\n",
     "if os.path.exists('/kaggle/input'):\n",
-    "    print(\"\\n사용 가능한 입력 디렉토리 (Available input directories):\")\n",
+    "    print(\"\\nAvailable input directories:\")\n",
     "    for item in os.listdir('/kaggle/input'):\n",
     "        item_path = os.path.join('/kaggle/input', item)\n",
     "        print(f\"  - {item_path}\")\n",
@@ -525,7 +523,6 @@
     "import pandas as pd\n",
     "\n",
     "# Configuration - Use auto-detected paths or set manually\n",
-    "# 자동으로 찾은 경로를 사용하거나 수동으로 설정\n",
     "CONFIG = {\n",
     "    'model_path': model_path if 'model_path' in globals() and model_path else '/kaggle/input/your-model-path/t15_pretrained_rnn_baseline',\n",
     "    'data_dir': data_dir if 'data_dir' in globals() and data_dir else '/kaggle/input/your-data-path/hdf5_data_final',\n",
@@ -536,7 +533,6 @@
     "}\n",
     "\n",
     "# If paths were not auto-detected, set them manually here:\n",
-    "# 경로가 자동으로 찾아지지 않은 경우 수동으로 설정하세요\n",
     "# CONFIG['model_path'] = '/kaggle/input/your-dataset-name/t15_pretrained_rnn_baseline'\n",
     "# CONFIG['data_dir'] = '/kaggle/input/your-dataset-name/hdf5_data_final'\n",
     "# CONFIG['csv_path'] = '/kaggle/input/your-dataset-name/t15_copyTaskData_description.csv'\n",
@@ -551,7 +547,6 @@
     "print(\"=\" * 60)\n",
     "\n",
     "# Check file existence\n",
-    "# 파일 존재 여부 확인\n",
     "print(\"\\nFile Existence Check:\")\n",
     "model_args_file = os.path.join(CONFIG['model_path'], 'checkpoint', 'args.yaml')\n",
     "model_checkpoint = os.path.join(CONFIG['model_path'], 'checkpoint', 'best_checkpoint')\n",
